--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=AKIAVOFSH3SLMSJKI2HM
+AWS_SECRET_ACCESS_KEY=tnb4Gr/yyj6s6ouyvhCi0qqnT5SfqQc2eLSpPFLz
+
+MONGODB_URI=mongodb+srv://serverless_nextjs_api:reco2468@cluster0.1qarq.mongodb.net/api_endpoint?retryWrites=true&w=majority
+MONGODB_DB=api_endpoint 
